reajustes en el html

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productores</title>
+    <title>cotizalo</title>
     <script src="https://kit.fontawesome.com/65efb81e21.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img class="imagenLogo" src="#">
+            <img class="imagenLogo" src="#" alt="logo">
         </div>
         <div class="buscador">
-            <div class="barraBusqueda"></div>
-            <button class="botonBusqueda"></button>
+            <input text class="barraBusqueda" placeholder="buscar..."></input>
+            <button class="botonBusqueda"><i class="fas fa-search"></i></button>
         </div>
         <div class="registrador">
-            <div class="registrar"></div>
-            <div class="iniciar-secion"></div>
+            <button class="registrar">registrate</button>
+            <button class="iniciar-secion">ingresar</button>
         </div>
         <div class="contactar-header">
             <p>Contactanos</p>
@@ -29,26 +29,58 @@
     <nav>
         <div class="contenedorFiltros">
             <ul class="filtros">
-                <li class="filtro-1"></li>
-                <li class="filtro-2"></li>
-                <li class="filtro-3"></li>
-                <li class="filtro-4"></li>
-                <li class="filtro-5"></li>
-                <li class="filtro-6"></li>
+                <li class="filtro-1"><a href="#">filtro</a></li>
+                <li class="filtro-2"><a href="#">filtro</a></li>
+                <li class="filtro-3"><a href="#">filtro</a></li>
+                <li class="filtro-4"><a href="#">filtro</a></li>
+                <li class="filtro-5"><a href="#">filtro</a></li>
+                <li class="filtro-6"><a href="#">filtro</a></li>
             </ul>
         </div>
     </nav>
 
     <section>
-        <div class="contenedorProductos">
-            <div class="producto"></div>
-            <div class="producto"></div>
-            <div class="producto"></div>
-            <div class="producto"></div>
-            <div class="producto"></div>
-            <div class="producto"></div>
-            <div class="producto"></div>
-            <div class="producto"></div>
+        <div class="contenedor">
+            <div class="contenedorProducto">
+                <img src="#" alt="fotos de los productos">
+                <div class="producto">producto</div>
+                <button class="solicitar">solicitar</button>
+            </div>
+            <div class="producto">
+                <img src="#" alt="fotos de los productos">
+                <div class="producto">producto</div>
+                <button class="solicitar">solicitar</button>
+            </div>
+            <div class="producto">
+                <img src="#" alt="fotos de los productos">
+                <div class="producto">producto</div>
+                <button class="solicitar">solicitar</button>
+            </div>
+            <div class="producto">
+                <img src="#" alt="fotos de los productos">
+                <div class="producto">producto</div>
+                <button class="solicitar">solicitar</button>
+            </div>
+            <div class="producto">
+                <img src="#" alt="fotos de los productos">
+                <div class="producto">producto</div>
+                <button class="solicitar">solicitar</button>
+            </div>
+            <div class="producto">
+                <img src="#" alt="fotos de los productos">
+                <div class="producto">producto</div>
+                <button class="solicitar">solicitar</button>
+            </div>
+            <div class="producto">
+                <img src="#" alt="fotos de los productos">
+                <div class="producto">producto</div>
+                <button class="solicitar">solicitar</button>
+            </div>
+            <div class="producto">
+                <img src="#" alt="fotos de los productos">
+                <div class="producto">producto</div>
+                <button class="solicitar">solicitar</button>
+            </div>
         </div>
     </section>
     
@@ -60,7 +92,7 @@
 
     <footer>
         <div class="copy">
-            <p>copyright ° Federico Ponce de León</p>
+            <p>copyright © Federico Ponce de León</p>
         </div>
         <div class="mail-num">
             <p>Mail-Num</p>
