--- a/filtro1.html
+++ b/filtro1.html
@@ -32,10 +32,10 @@
     <nav>
         <div class="ContainerFilters">
             <ul class="filters">
-                <li class="filter-1"><a href="./filtro1.html">filtro</a></li>
-                <li class="filter-2"><a href="./filtro2.html">filtro</a></li>
-                <li class="filter-3"><a href="./filtro3.html">filtro</a></li>
-                <li class="filter-4"><a href="./filtro4.html">filtro</a></li>
+                <li class="filter-1"><a href="./filtro1.html">filtro ></a></li>
+                <li class="filter-2"><a href="./filtro2.html">filtro ></a></li>
+                <li class="filter-3"><a href="./filtro3.html">filtro ></a></li>
+                <li class="filter-4"><a href="./filtro4.html">filtro ></a></li>
             </ul>
         </div>
     </nav>
