--- a/filtro2.html
+++ b/filtro2.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="./index.html"><h6>INICIO</h6></a>
             <div class="seeker">
-                <input text class="barSeeker" placeholder="buscar...">
+                < > text class="barSeeker" placeholder="buscar...">
                 <button class="buttonSeeker"><i class="fas fa-search"></i></button>
             </div>
             <div class="register">
@@ -32,10 +32,10 @@
     <nav>
         <div class="ContainerFilters">
             <ul class="filters">
-                <li class="filter-1"><a href="./filtro1.html">filtro</a></li>
-                <li class="filter-2"><a href="./filtro2.html">filtro</a></li>
-                <li class="filter-3"><a href="./filtro3.html">filtro</a></li>
-                <li class="filter-4"><a href="./filtro4.html">filtro</a></li>
+                <li class="filter-1"><a href="./filtro1.html">filtro ></a></li>
+                <li class="filter-2"><a href="./filtro2.html">filtro ></a></li>
+                <li class="filter-3"><a href="./filtro3.html">filtro ></a></li>
+                <li class="filter-4"><a href="./filtro4.html">filtro ></a></li>
             </ul>
         </div>
     </nav>
