--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>cotizalo</title>
     <script src="https://kit.fontawesome.com/65efb81e21.js" crossorigin="anonymous"></script>
 </head>
@@ -32,10 +33,10 @@
     <nav>
         <div class="ContainerFilters">
             <ul class="filters">
-                <li class="filter-1"><a href="./filtro1.html">filtro</a></li>
-                <li class="filter-2"><a href="./filtro2.html">filtro</a></li>
-                <li class="filter-3"><a href="./filtro3.html">filtro</a></li>
-                <li class="filter-4"><a href="./filtro4.html">filtro</a></li>
+                <li class="filter-1"><a href="./filtro1.html">filtro ></a></li>
+                <li class="filter-2"><a href="./filtro2.html">filtro ></a></li>
+                <li class="filter-3"><a href="./filtro3.html">filtro ></a></li>
+                <li class="filter-4"><a href="./filtro4.html">filtro ></a></li>
             </ul>
         </div>
     </nav>
@@ -50,12 +51,15 @@
                     <th>Caracteristicas</th>
                 </tr>
                 <tr>
-                    <td>Pólizas de seguros</td>
+                    <td>
+                        <span class="textTdName">Pólizas de seguros</span><br>
+                        <iframe width="320" height="180" src="https://www.youtube.com/embed/lKVzSit0eIs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </td>
                     <td>
                         <ul>
                             <li>Contrato donde tu pagando una prima,<br>la compania se obliga a pagar ante un<br> siniestro espesificado en el contrato.</li>
                             <li>Puedes obtener tu póliza contactandote con una compania.</li>
-                            <li>Puedes obtener tu poliza por medio de un <br> mediador los cuales te ayudaran y asesoraran <br> en tanto la compra y cotización <br> de tu seguro, cualquier duda que <br> se te pueda presentar y te <br> agilizaran la mayoria de tus tramitres.</li>
+                            <span><li>Puedes obtener tu poliza por medio de un <br> mediador los cuales te ayudaran y asesoraran <br> en tanto la compra y cotización <br> de tu seguro, cualquier duda que <br> se te pueda presentar y te <br> agilizaran la mayoria de tus tramitres.</li></span>
                         </ul>
                     </td>
                     <td>
