Css en todos los html

--- a/filtro2.html
+++ b/filtro2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>cotizalo</title>
     <script src="https://kit.fontawesome.com/65efb81e21.js" crossorigin="anonymous"></script>
 </head>
@@ -15,7 +16,7 @@
         <nav>
             <a href="./index.html"><h6>INICIO</h6></a>
             <div class="seeker">
-                < > text class="barSeeker" placeholder="buscar...">
+                <input text class="barSeeker" placeholder="buscar...">
                 <button class="buttonSeeker"><i class="fas fa-search"></i></button>
             </div>
             <div class="register">
