--- a/registro.html
+++ b/registro.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="whith=device-whith, initial-scale=1,
 	maximun-scale=5">
+	<link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
