Listo para primera entrega del final

--- a/html/filtro3.html
+++ b/html/filtro3.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <title>cotizalo</title>
     <script src="https://kit.fontawesome.com/65efb81e21.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="./index.html"><img class="imagenLogo" src="#" alt="logo"></a>
+            <a href="../index.html"><img class="imagenLogo" src="../img/logo.png" alt="logo"></a>
         </div>
         <nav>
-            <a href="./index.html"><h6>INICIO</h6></a>
+            <a href="../index.html"><h6>INICIO</h6></a>
             <div class="seeker">
                 <input text class="barSeeker" placeholder="buscar...">
                 <button class="buttonSeeker"><i class="fas fa-search"></i></button>
@@ -24,7 +26,7 @@
                 <button class="signUp"><a href="./registro.html">registrate</a></button>
             </div>
             <button class="contactHeader">
-                <a href="#">Contactanos
+                <a href=".//contactanos.html">Contactanos
                 <i class="fab fa-whatsapp"></i></a>
             </button>
         </nav>
@@ -45,13 +47,8 @@
         <div class="container">
             <h1>Solicita tu cotización</h1>
             <div class="containerProduct">
-                <img src="#" alt="fotos de los productos">
-                <h3 class="product">producto</h3>
-                <button class="solicitar">solicitar</button>
-            </div>
-            <div class="containerProduct">
-                <img src="#" alt="fotos de los productos">
-                <h3 class="product">producto</h3>
+                <img src="../img/rob.jpg" alt="fotos de los productos">
+                <h3 class="product">ROBO</h3>
                 <button class="solicitar">solicitar</button>
             </div>
             
