--- a/html/registro.html
+++ b/html/registro.html
@@ -5,14 +5,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="whith=device-whith, initial-scale=1,
 	maximun-scale=5">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../style.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header>
         <div class="logo">
-            <a href="./index.html"><img class="imagenLogo" src="#" alt="logo"></a>
+            <a href="../index.html"><img class="imagenLogo" src="#" alt="logo"></a>
         </div>
 	</header>
 	<div id="container">
