--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <title>cotizalo</title>
     <script src="https://kit.fontawesome.com/65efb81e21.js" crossorigin="anonymous"></script>
 </head>
@@ -20,23 +22,25 @@
                 <button class="buttonSeeker"><i class="fas fa-search"></i></button>
             </div>
             <div class="register">
-                <button class="logIn"><a href="./ingreso.html">ingresar</a></button>
-                <button class="signUp"><a href="./registro.html">registrate</a></button>
+                <button class="logIn"><a href="html/ingreso.html">ingresar</a></button>
+                <button class="signUp"><a href="html/registro.html">registrate</a></button>
             </div>
             <button class="contactHeader">
-                <a href="./contactanos.html">Contactanos
+                <a href="html/contactanos.html">Contactanos
                 <i class="fab fa-whatsapp"></i></a>
             </button>
         </nav>
     </header>
 
     <nav>
+        <h6>AGILIZA LA BUSQUEDA</h6>
+        <hr>
         <div class="ContainerFilters">
             <ul class="filters">
-                <li class="filter-1"><a href="./filtro1.html">filtro ></a></li>
-                <li class="filter-2"><a href="./filtro2.html">filtro ></a></li>
-                <li class="filter-3"><a href="./filtro3.html">filtro ></a></li>
-                <li class="filter-4"><a href="./filtro4.html">filtro ></a></li>
+                <li class="filter-1"><a href="html/filtro1.html">filtro ></a></li>
+                <li class="filter-2"><a href="html/filtro2.html">filtro ></a></li>
+                <li class="filter-3"><a href="html/filtro3.html">filtro ></a></li>
+                <li class="filter-4"><a href="html/filtro4.html">filtro ></a></li>
             </ul>
         </div>
     </nav>
@@ -44,6 +48,8 @@
     <section>
         <div class="container">
             <h1>Solicita tu cotización</h1>
+            <h6>CONOCE LO QUE NECESITAS</h6>
+            <hr>
             <table class="tableProduct" border="solid 1px black">
                 <tr>
                     <th>Nombre</th>
@@ -74,39 +80,43 @@
                     </td>
                 </tr>
             </table><br>
+            <h6>TE OFECEMOS ESTAS PÓLIZAS</h6>
+            <hr>
             <div class="containerProduct">
                 <img src="img/moto.jpg" alt="fotos de los productos">
-                <h3 class="product">producto</h3>
-                <button class="solicitar">solicitar</button>
+                <h3 class="product">MOTOS</h3>
+                <button class="solicitar">SOLICITAR</button>
             </div>
             <div class="containerProduct">
                 <img src="img/auto.jpg" alt="fotos de los productos">
-                <h3 class="product">producto</h3>
-                <button class="solicitar">solicitar</button>
+                <h3 class="product">AUTOS</h3>
+                <button class="solicitar">SOLICITAR</button>
             </div>
             <div class="containerProduct">
                 <img src="img/casa.jpg" alt="fotos de los productos">
-                <h3 class="product">producto</h3>
-                <button class="solicitar">solicitar</button>
+                <h3 class="product">CASAS</h3>
+                <button class="solicitar">SOLICITAR</button>
             </div>
             <div class="containerProduct">
                 <img src="img/rob.jpg" alt="fotos de los productos">
-                <h3 class="product">producto</h3>
-                <button class="solicitar">solicitar</button>
+                <h3 class="product">ROBO</h3>
+                <button class="solicitar">SOLICITAR</button>
             </div>
             <div class="containerProduct">
                 <img src="img/bici.jpg" alt="fotos de los productos">
-                <h3 class="product">producto</h3>
-                <button class="solicitar">solicitar</button>
+                <h3 class="product">BICIS</h3>
+                <button class="solicitar">SOLICITAR</button>
             </div>
             <div class="containerProduct">
                 <img src="img/accidentePersonal.jpg" alt="fotos de los productos">
-                <h3 class="product">producto</h3>
-                <button class="solicitar">solicitar</button>
+                <h3 class="product">ACCIDENTE PERSONAL</h3>
+                <button class="solicitar">SOLICITAR</button>
             </div>
             
         </div>
     </section>
+
+    <hr>
     
     <!---Posible aside para propaganda-->
 
