--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="./index.html"><img class="imagenLogo" src="#" alt="logo"></a>
+            <a href="../index.html"><img class="imagenLogo" src="#" alt="logo"></a>
         </div>
         <nav>
-            <a href="./index.html"><h6>INICIO</h6></a>
+            <a href="../index.html"><h6>INICIO</h6></a>
          
             <div class="register">
                 <button class="logIn"><a href="./ingreso.html">ingresar</a></button>
