--- a/html/filtro1.html
+++ b/html/filtro1.html
@@ -12,10 +12,11 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <a href="../index.html"><img class="imagenLogo" src="../img/logo.png" alt="logo"></a>
-        </div>
         <nav>
+            <div class="logo">
+                <a href="../index.html"><img class="imagenLogo" src="../img/logo.png" alt="logo"></a>
+            </div>
+            
             <a href="../index.html"><h6>INICIO</h6></a>
             <div class="seeker">
                 <input text class="barSeeker" placeholder="buscar...">
@@ -35,10 +36,10 @@
     <nav>
         <div class="ContainerFilters">
             <ul class="filters">
-                <li class="filter-1"><a href="./filtro1.html">filtro ></a></li>
-                <li class="filter-2"><a href="./filtro2.html">filtro ></a></li>
-                <li class="filter-3"><a href="./filtro3.html">filtro ></a></li>
-                <li class="filter-4"><a href="./filtro4.html">filtro ></a></li>
+                <li class="filter-1"><button><a href="filtro1.html">filtro ></a></button></li>
+                <li class="filter-2"><button><a href="./filtro2.html">filtro ></a></button></li>
+                <li class="filter-3"><button><a href="./filtro3.html">filtro ></a></button></li>
+                <li class="filter-4"><button><a href="./filtro4.html">filtro ></a></button></li>
             </ul>
         </div>
     </nav>
