--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html"><img class="imagenLogo" src="#" alt="logo"></a>
+            <a href="../index.html"><img class="imagenLogo" src="../img/logo.png" alt="logo"></a>
         </div>
         <nav>
             <a href="../index.html"><h6>INICIO</h6></a>
