--- a/html/ingreso.html
+++ b/html/ingreso.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html"><img class="imagenLogo" src="#" alt="logo"></a>
+            <a href="../index.html"><img class="imagenLogo" src="../img/logo.png" alt="logo"></a>
         </div>
     </header>
     <div class="containerLogIn">
