--- a/html/registro.html
+++ b/html/registro.html
@@ -14,7 +14,7 @@
 <body>
 	<header>
         <div class="logo">
-            <a href="../index.html"><img class="imagenLogo" src="#" alt="logo"></a>
+            <a href="../index.html"><img class="imagenLogo" src="../img/logo.png" alt="logo"></a>
         </div>
 	</header>
 	<div id="container">
