--- a/html/filtro2.html
+++ b/html/filtro2.html
@@ -23,8 +23,8 @@
                 <button class="buttonSeeker"><i class="fas fa-search"></i></button>
             </div>
             <div class="register">
-                <button class="logIn"><a href="./ingreso.html">ingresar</a></button>
-                <button class="signUp"><a href="./registro.html">registrate</a></button>
+                <button class="logIn"><a href="./ingreso.html">INGRESAR</a></button>
+                <button class="signUp"><a href="./registro.html">REGISTRAR</a></button>
             </div>
             <button class="contactHeader">
                 <a href=".//contactanos.html">Contactanos
@@ -36,10 +36,10 @@
     <nav>
         <div class="ContainerFilters">
             <ul class="filters">
-                <li class="filter-1"><button><a href="./filtro1.html">filtro ></a></button></li>
-                <li class="filter-2"><button><a href="./filtro2.html">filtro ></a></button></li>
-                <li class="filter-3"><button><a href="./filtro3.html">filtro ></a></button></li>
-                <li class="filter-4"><button><a href="./filtro4.html">filtro ></a></button></li>
+                <li class="filter-1"><button><a href="./filtro1.html">VEHÍCULOS ></a></button></li>
+                <li class="filter-2"><button><a href="./filtro2.html">HOGAR ></a></button></li>
+                <li class="filter-3"><button><a href="./filtro3.html">ROBO ></a></button></li>
+                <li class="filter-4"><button><a href="./filtro4.html">ACCIDENTE ></a></button></li>
             </ul>
         </div>
     </nav>
