--- a/html/registro.html
+++ b/html/registro.html
@@ -5,20 +5,20 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="whith=device-whith, initial-scale=1,
 	maximun-scale=5">
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="../registro.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
-	<header>
-        <div class="logo">
-            <a href="../index.html"><img class="imagenLogo" src="../img/logo.png" alt="logo"></a>
-        </div>
-	</header>
+	
+        
+	
 	<div id="container">
-
+		<div class="logo">
+			<a href="../index.html"><img class="imagenLogo" src="../img/logo.png" alt="logo"></a>
+		</div>
 		<div class="panel-container">
 			<div class="panel">
 				<h1 class="panel__heading">Registrate</h1>
@@ -101,7 +101,7 @@
 					</p>
 
 					<button type="submit"><a href="./index.html">Crear cuenta</a></button>
-                    <input type="button" value="Borrar datos del formulario">
+                    <input class="suprim" type="button" value="Borrar datos del formulario">
 				</form>
 			</div>
 		</div>
